@@ -102,7 +102,7 @@ style "entry" {
 	fg[SELECTED] = @text_color
 
 	engine "clearlooks" {
-		focus_color = shade (0.896, @selected_bg_color)
+		focus_color = shade (0.65, @selected_bg_color)
 	}
 }
 
